--- a/src/Nav.css
+++ b/src/Nav.css
@@ -4,8 +4,9 @@
   width: 100%;
   position: fixed;
   display: flex;
-  z-index: 99999;
+  z-index: 1;
   background-color: black;
+  max-height: 12vh;
 }
 .header {
   display: flex;
@@ -37,7 +38,7 @@
   right: 0;
   margin-top: 1.6rem;
 }
-.buttons > button {
+.nav-btn1 {
   cursor: pointer;
   color: #fff;
   outline: none;
@@ -50,7 +51,7 @@
   padding: 0.6rem 2rem;
   height: 2.5vw;
 }
-.buttons > button:hover {
+.nav-btn1:hover {
   color: #000;
   background-color: #e6e6e6;
   transition: all 0.2s ease-in;
