--- a/src/SongGenre/Genre.css
+++ b/src/SongGenre/Genre.css
@@ -35,6 +35,7 @@
   width: 100%;
   /* height: 40vh;  */
   margin-left: 7rem;
+  /* border-radius: 50% */
 }
 .john:hover {
   transform: scale(1.1);
