--- a/src/Navbar/Nav.css
+++ b/src/Navbar/Nav.css
@@ -78,3 +78,21 @@
 .iconify2 {
   font-size: 20px;
 }
+@media only screen and (min-width: 600px) {
+  .navbar-div {
+    border: 1px solid white;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 100vw;
+    height: 5rem;
+    overflow-y: hidden;
+    overflow-x: hidden;
+  }
+}
+/* //small// */
+@media only screen and (max-width: 600px) {
+  .buttons {
+    display: none;
+  }
+}
