--- a/src/LikedVideos/LikedVideo.css
+++ b/src/LikedVideos/LikedVideo.css
@@ -2,6 +2,7 @@
   width: 40%;
   margin-left: 1rem;
   overflow: hidden;
+  /* border: 2px solid violet; */
 }
 .video_div_liked {
   color: white;
@@ -9,20 +10,47 @@
   position: relative;
   overflow: hidden;
   margin-bottom: 1rem;
+  /* border: 1px solid white; */
 }
 .thubmnail_div_liked {
   overflow: hidden;
   width: 65%;
+  /* border: 3px solid orange; */
 }
 .video_contents_liked {
   font-size: 12px;
   margin-left: 1rem;
   color: #aaaaaa;
   max-width: 35%;
+  /* border: 2px solid pink */
 }
 .dustbinIcon {
   color: #aaaaaa;
 }
 .thumbnail_img_liked {
   width: 100%;
+  /* border: 1px solid blue; */
+}
+.like_content_div {
+  /* border: 1px solid red; */
+}
+.likesssss {
+  margin-left: 13rem;
+  width: 80%;
+}
+@media only screen and (max-width: 600px) {
+  .likesssss {
+    margin-left: 2rem;
+    /* border: 4px solid green; */
+  }
+  .likedVideoDiv {
+    width: 100%;
+    margin-left: 0.1rem;
+  }
+  .video_contents_liked {
+    font-size: 10px;
+  }
+  .dustbinIcon {
+    font-size: 18px;
+  }
 }
