--- a/src/LikedVideos/LikedVideo.css
+++ b/src/LikedVideos/LikedVideo.css
@@ -1,5 +1,5 @@
 .likedVideoDiv {
-  width: 40%;
+  /* width: 40%; */
   margin-left: 1rem;
   overflow: hidden;
   /* border: 2px solid violet; */
@@ -18,10 +18,10 @@
   /* border: 3px solid orange; */
 }
 .video_contents_liked {
-  font-size: 12px;
+  /* font-size: 12px;
   margin-left: 1rem;
   color: #aaaaaa;
-  max-width: 35%;
+  max-width: 35%; */
   /* border: 2px solid pink */
 }
 .dustbinIcon {
@@ -34,10 +34,10 @@
 .like_content_div {
   /* border: 1px solid red; */
 }
-.likesssss {
+/* .likesssss {
   margin-left: 13rem;
   width: 80%;
-}
+} */
 @media only screen and (max-width: 600px) {
   .likesssss {
     margin-left: 2rem;
@@ -46,11 +46,62 @@
   .likedVideoDiv {
     width: 100%;
     margin-left: 0.1rem;
+    /* border: 4px solid green; */
   }
   .video_contents_liked {
     font-size: 10px;
+    margin-left: 1rem;
   }
   .dustbinIcon {
     font-size: 18px;
+  }
+}
+@media only screen and (min-width: 600px) {
+  .likedVideoDiv {
+    max-width: 400px;
+    margin-left: 1rem;
+    overflow: hidden;
+    /* border: 2px solid violet; */
+    position: relative;
+    height: auto;
+  }
+  .video_div_liked {
+    color: white;
+    display: flex;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 1rem;
+    font-size: 12px;
+    /* border: 1px solid white; */
+  }
+  .thubmnail_div_liked {
+    overflow: hidden;
+    width: 100%;
+    /* border: 3px solid orange; */
+  }
+  .video_contents_liked {
+    font-size: 12px;
+    margin-left: 1rem;
+    color: #aaaaaa;
+    max-width: 35%;
+    /* border: 2px solid pink; */
+    font-size: 10px;
+
+    /* position: absolute; */
+  }
+  .thumbnail_img_liked {
+    /* width: 100%; */
+    /* border: 1px solid blue; */
+    /* position:absolute; */
+  }
+  .like_content_div {
+    /* border: 1px solid red; */
+  }
+  .likesssss {
+    margin-left: 13rem;
+    width: 80%;
+  }
+  .dustbinIcon {
+    font-size: 24px;
   }
 }
