--- a/src/VideoPlayingScreen/PlayVideo.css
+++ b/src/VideoPlayingScreen/PlayVideo.css
@@ -90,7 +90,10 @@
   display: flex;
   justify-content: space-between;
 }
-
+.videoPlayingScreen {
+  width: 100%;
+  height: 450px;
+}
 @media only screen and (max-width: 600px) {
   .div2 {
     display: flex;
@@ -126,5 +129,9 @@
     width: 100%;
     margin-top: 1rem;
     margin-left: 0.1rem;
+  }
+  .videoPlayingScreen {
+    width: 100%;
+    height: 210px;
   }
 }
