--- a/src/VideoPlayingScreen/PlayVideo.css
+++ b/src/VideoPlayingScreen/PlayVideo.css
@@ -134,4 +134,10 @@
     width: 100%;
     height: 210px;
   }
+  .image_avatar {
+    width: 100%;
+    border-radius: 50%;
+    max-width: 2.7rem;
+    /* margin-top: 10px; */
+  }
 }
