--- a/src/VideoPlayingScreen/PlayVideo.css
+++ b/src/VideoPlayingScreen/PlayVideo.css
@@ -37,7 +37,7 @@
 .like_items {
   display: flex;
 }
-.image_avatar {
+.image_avatar_play {
   width: 100%;
   border-radius: 50%;
   max-width: 2.7rem;
@@ -121,9 +121,9 @@
     width: 100%;
     height: 210px;
   }
-  .image_avatar {
+  .image_avatar_play {
     width: 100%;
     border-radius: 50%;
-    max-width: 2.7rem;
+    max-width: 2rem;
   }
 }
