--- a/src/DisplayGenreVideoScreen/DisplayScreem.css
+++ b/src/DisplayGenreVideoScreen/DisplayScreem.css
@@ -1,96 +1,76 @@
-.mainvideodiv {
-  margin-left: 14rem;
-  height: 250px;
-}
-.video_div {
-  color: white;
-  display: flex;
-  max-height: 350px;
-  position: relative;
-  overflow: hidden;
-  margin-bottom: 3rem;
-}
-
-.video_contents {
-  font-size: 14px;
-  margin-left: 2rem;
-}
-.display_video_iframe {
-  border: 0;
-}
-.thubmnail_div {
-  overflow: hidden;
-  width: 30%;
-}
-.thumbnail_img {
-  width: 100%;
-  margin-top: 1rem;
-  margin-left: 2rem;
-}
-.main_display_div {
-  width: 80%;
-  margin: auto;
-  overflow: hidden;
-  position: relative;
-}
-.para {
-  margin-top: 5rem;
-}
-
 @media only screen and (max-width: 600px) {
-  .main_display_div {
-    width: 97%;
-    overflow: hidden;
+  .ds_video_content {
+    margin-bottom: 1rem;
   }
-  .mainvideodiv {
+  .ds_img {
     width: 100%;
-    margin-left: -0.1rem;
-    margin-bottom: 2rem;
+    cursor: pointer;
   }
-  .thubmnail_div {
-    width: 100%;
+  .ds_titles_views_avatar {
+    display: flex;
   }
-  .thumbnail_img {
-    width: 110%;
-    margin-left: -0.1rem;
-    margin-top: -0.1rem;
-  }
-  .video_contents {
-    font-size: 7px;
-    margin-left: 0.4rem;
-  }
-  .image_avatar_display {
-    width: 100%;
+  .ds_avatar_img {
     border-radius: 50%;
-    max-width: 2rem;
-    margin-top: 10px;
+    width: 2.5rem;
   }
-  .para {
-    margin-top: 2rem;
+  .ds_title_views {
+    margin-left: 1rem;
+    font-size: 12px;
+  }
+  .ds_name {
+    font-weight: bold;
+  }
+  .ds_views {
+    color: #aaaaaa;
   }
 }
 @media only screen and (min-width: 600px) {
-  .thubmnail_div {
-    width: 50%;
+  .ds_video_content {
+    display: flex;
+    /* border: 1px solid white; */
+    width: 80%;
+    margin: auto;
+    margin-left: 14rem;
+    position: relative;
+    margin-bottom: 1rem;
   }
-  .thumbnail_img {
+  .ds_img {
     width: 100%;
-    margin: 0;
+    max-width: 400px;
+    cursor: pointer;
   }
-  .video_contents {
-    font-size: 12px;
-    margin-left: 2rem;
-    width: 70%;
-    margin-top: -1rem;
+  .ds_name {
+    font-weight: bold;
   }
-  .video_div {
-    margin-left: -5rem;
+  .ds_views {
+    color: #aaaaaa;
+  }
+  .ds_avatar_img {
+    border-radius: 50%;
+    width: 2.5rem;
+    position: absolute;
+    margin-top: 7rem;
+    margin-left: 1rem;
+  }
+  .ds_name_div {
+    margin-left: 1rem;
+  }
+  .ds_views_div {
+    margin-left: 1rem;
     margin-top: 1rem;
   }
-  .image_avatar_display {
-    width: 100%;
-    border-radius: 50%;
-    max-width: 2.7rem;
-    margin-top: 10px;
+  .ds_artist_div {
+    margin-left: 4rem;
+    margin-top: 3.5rem;
+  }
+  .ds_artist {
+    font-weight: 800;
+    font-size: 12px;
+  }
+}
+@media only screen and (max-width: 992px) {
+  .ds_artist_div {
+    margin-left: 4rem;
+    margin-top: 2.4rem;
   }
 }
