--- a/src/LikedVideos/LikedVideo.css
+++ b/src/LikedVideos/LikedVideo.css
@@ -1,3 +1,7 @@
+.like_content_div {
+  margin-top: -2rem;
+}
+
 .likedVideoDiv {
   margin-left: 1rem;
   overflow: hidden;
@@ -8,7 +12,6 @@
   position: relative;
   overflow: hidden;
   margin-bottom: 1rem;
-  border: 1px solid red;
 }
 
 .dustbinIcon {
@@ -29,7 +32,7 @@
   .video_contents_liked {
     font-size: 10px;
     margin-left: 1rem;
-    border: 1px solid white;
+
     width: 50%;
   }
   .dustbinIcon {
@@ -38,7 +41,6 @@
   .thubmnail_div_liked {
     overflow: hidden;
     width: 50%;
-    border: 1px solid white;
   }
 }
 @media only screen and (min-width: 600px) {
@@ -61,14 +63,12 @@
   .thubmnail_div_liked {
     overflow: hidden;
     width: 70%;
-    border: 1px solid white;
   }
   .video_contents_liked {
     font-size: 12px;
     margin-left: 1rem;
     color: #aaaaaa;
     width: 30%;
-    border: 1px solid white;
 
     font-size: 10px;
   }
