--- a/src/VideoPlayingScreen/PlayVideo.css
+++ b/src/VideoPlayingScreen/PlayVideo.css
@@ -130,6 +130,10 @@
     margin-top: 15px;
     margin-left: 10px;
   }
+  .videoPlayingScreen {
+    width: 100%;
+    height: 300px;
+  }
 }
 @media only screen and (min-width: 600px) {
   .artist__name {
