--- a/src/VideoPlayingScreen/PlayVideo.css
+++ b/src/VideoPlayingScreen/PlayVideo.css
@@ -4,6 +4,7 @@
   margin-left: 3rem;
   width: 55%;
   overflow: hidden;
+  margin-top: 1rem;
 }
 
 .playvideoIcons {
@@ -47,6 +48,7 @@
   width: 40%;
   margin-left: 1rem;
   overflow: hidden;
+  margin-top: 0.6rem;
 }
 /*  */
 .video_div_right {
@@ -62,7 +64,6 @@
 .video_contents_right {
   font-size: 14px;
   margin-left: 1rem;
-  color: #aaaaaa;
 }
 
 .thubmnail_div_right {
@@ -96,6 +97,7 @@
     width: 100%;
     margin-left: 0.1rem;
     overflow: hidden;
+    margin-top: 2rem;
   }
   .viewsyears {
     font-size: 12px;
@@ -145,6 +147,13 @@
     margin-top: 20px;
     margin-left: 10px;
   }
+
+  .div2 {
+    margin-top: 5rem;
+  }
+  /* .main_video_playing_screen{
+    margin-top: -3rem;
+  } */
 }
 /* model */
 .model {
