--- a/src/styles.css
+++ b/src/styles.css
@@ -5,9 +5,6 @@ body {
   background-color: #141414;
   color: #fff;
 }
-.App {
-}
-
 .app-body {
   margin: 0rem 2rem 0rem 2rem;
 }
@@ -15,4 +12,7 @@ body {
 body {
   margin: 0;
   padding: 0;
+}
+.App {
+  margin-top: -1rem;
 }
