--- a/src/LeftNavBar/LeftBar.css
+++ b/src/LeftNavBar/LeftBar.css
@@ -29,15 +29,21 @@
     display: flex;
     flex-direction: row;
     bottom: 0;
-    height: 10vh;
+    height: 9vh;
     width: 100%;
-    z-index: 1;
-    background-color: black;
+    z-index: 99999;
+    /* background-color: white; */
 
     justify-content: space-between;
   }
   .left_bar_text {
     display: none;
+  }
+  .leftbar_icons {
+    position: absolute;
+    margin-top: -0.1rem;
+    margin: 0px;
+    margin-left: -4px;
   }
   .leftbar_icons:hover {
     color: white;
