--- a/src/Navbar/Nav.css
+++ b/src/Navbar/Nav.css
@@ -106,6 +106,12 @@
   .buttons {
     margin-left: 5rem;
   }
+  .color_modes {
+    /* border: 1px solid white; */
+    position: absolute;
+    right: 0;
+    margin-right: 4rem;
+  }
 }
 /* //small// */
 @media only screen and (max-width: 600px) {
@@ -115,6 +121,11 @@
   .buttons {
     display: none;
   }
+  .color_modes {
+    position: absolute;
+    right: 0;
+    margin-right: 4rem;
+  }
   .nav_avatar {
     position: absolute;
     right: 0;
@@ -122,5 +133,9 @@
   }
   .navbar-div {
     height: 10vh;
+  }
+  .header > div {
+    overflow: hidden;
+    margin-top: -1rem;
   }
 }
