--- a/src/Row/Row.css
+++ b/src/Row/Row.css
@@ -75,11 +75,10 @@
 }
 @media only screen and (max-width: 600px) {
   .row_div {
-    margin-left: 1rem;
-    margin-top: -1rem;
+    margin-top: 1rem;
   }
   .row-1 {
-    margin-top: -1rem;
+    /* margin-top: -1rem; */
   }
   .iframe_row {
     margin: 1rem;
