--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  background-color: #141414;
+  /* background-color: #141414; */
   color: #fff;
 }
 .app-body {
