--- a/src/Playlist.css
+++ b/src/Playlist.css
@@ -66,7 +66,7 @@
     }
     .iframe_row {
       margin: 1rem;
-      width: 100%;
+      /* width: 100%; */
     }
     .video_image {
       width: 210px;
