--- a/src/VideoPlayingScreen/PlayVideo.css
+++ b/src/VideoPlayingScreen/PlayVideo.css
@@ -86,7 +86,7 @@
   width: 100%;
   height: 450px;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1144px) {
   .div2 {
     display: flex;
     flex-direction: column;
@@ -120,10 +120,7 @@
     margin-top: 1rem;
     margin-left: 0.1rem;
   }
-  .videoPlayingScreen {
-    width: 100%;
-    height: 210px;
-  }
+ 
   .image_avatar_play {
     width: 100%;
     border-radius: 50%;
@@ -141,6 +138,12 @@
     color: #aaaaaa;
     margin-top: -0.75rem;
   }
+  .searchbar{
+    display: none
+  }
+  .nav-btn1{
+    display:none;
+  }
 }
 @media only screen and (min-width: 600px) {
   .artist__name {
@@ -155,9 +158,10 @@
   }
 }
 /* model */
+
 .model {
   border: 1px solid black;
-  z-index: 1;
+  z-index: 111111;
   position: absolute;
   background-color: #212121;
   margin-top: 5rem;
@@ -214,3 +218,8 @@
   background-color: #212121;
   font-weight: bold;
 }
+@media only screen and (max-width: 1144px){
+.videoPlayingScreen {
+    width: 100%;
+    height: 400px;
+}}
