--- a/src/VideoPlayingScreen/PlayVideo.css
+++ b/src/VideoPlayingScreen/PlayVideo.css
@@ -221,5 +221,12 @@
 @media only screen and (max-width: 1144px){
 .videoPlayingScreen {
     width: 100%;
-    height: 400px;
+    height: 370px;
+    margin-top: 1.7rem;
+    
 }}
+@media only screen and (max-width: 300px){
+  .videoPlayingScreen {
+      width: 100%;
+      height: 200px;
+  }}
