--- a/src/DisplayGenreVideoScreen/DisplayScreem.css
+++ b/src/DisplayGenreVideoScreen/DisplayScreem.css
@@ -1,7 +1,9 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   .ds_video_content {
     margin-bottom: 1rem;
     position: relative;
+    /* z-index: 1; */
+    
   }
   .ds_img {
     width: 100%;
@@ -24,21 +26,42 @@
   .ds_views {
     color: #aaaaaa;
   }
+  .left_div{
+    display: none;
+  }
+  .ds_artistname{
+    display:none;
+  }
 }
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 800px) {
   .ds_video_content {
     display: flex;
     /* border: 1px solid white; */
-    width: 80%;
+    width: 70%;
     margin: auto;
     margin-left: 14rem;
     position: relative;
     margin-bottom: 1rem;
+   
+    overflow: hidden;
   }
+  .ds_img_div{
+    overflow: hidden;
+
+    width:60%;
+    max-width: 400px;
+  }
+  .ds_titles_views_avatar {
+ 
+    width: 40%; 
+    max-width: 300px;
+}
+ 
   .ds_img {
     width: 100%;
     max-width: 400px;
     cursor: pointer;
+ 
   }
   .ds_name {
     font-weight: bold;
@@ -49,9 +72,9 @@
   .ds_avatar_img {
     border-radius: 50%;
     width: 2.5rem;
-    position: absolute;
-    margin-top: 7rem;
-    margin-left: 1rem;
+   
+    bottom: 0;
+   
   }
   .ds_name_div {
     margin-left: 1rem;
@@ -68,6 +91,28 @@
     font-weight: 800;
     font-size: 12px;
   }
+.ds_artistname{
+  font-weight: 800;
+  font-size: 12px;
+  margin-left: 1rem;
+  margin-top:0.5rem;
+}
+  .ds_img:hover {
+    transform: scale(1.3);
+    transition: transform ease 0.6s;
+  }
+  .ds_avatar{
+  
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 4rem;
+    margin-left: 1rem;
+    display: flex;
+  }
+  .ds_artist{
+    display:none
+  }
+  
 }
 @media only screen and (min-width: 992px) {
   .ds_artist_div {
@@ -75,3 +120,4 @@
     margin-top: 3.6rem;
   }
 }
+
