--- a/src/SongGenre/Genre.css
+++ b/src/SongGenre/Genre.css
@@ -32,7 +32,7 @@
     margin-top: 1rem;
     padding: 1rem;
     overflow: hidden;
-    margin-left: 12rem;
+    /* margin-left: 12rem; */
  
   }
   .img{
