--- a/src/Row/Row.css
+++ b/src/Row/Row.css
@@ -69,7 +69,7 @@
   transition: transform ease 0.2s;
   cursor: pointer;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   .row_div {
     margin-top: 1rem;
   }
@@ -88,9 +88,14 @@
   }
 }
 /* large */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 800px) {
   .row_div {
     margin-left: 12rem;
     overflow: hidden;
   }
 }
+/* @media only screen and (min-width: 800px){
+.row_div {
+    margin-left: 12rem;
+    overflow: hidden;
+}} */
