--- a/src/Row/Row.css
+++ b/src/Row/Row.css
@@ -74,7 +74,7 @@
     margin-top: 1rem;
   }
   .row-1 {
-    /* margin-top: -1rem; */
+    margin-top: 1.7rem;
   }
   .iframe_row {
     margin: 1rem;
