--- a/src/DisplayGenreVideoScreen/DisplayScreem.css
+++ b/src/DisplayGenreVideoScreen/DisplayScreem.css
@@ -26,9 +26,9 @@
   .ds_views {
     color: #aaaaaa;
   }
-  .left_div{
+  /* .left_div{
     display: none;
-  }
+  } */
   .ds_artistname{
     display:none;
   }
