--- a/src/LeftNavBar/LeftBar.css
+++ b/src/LeftNavBar/LeftBar.css
@@ -3,6 +3,7 @@
   margin-left: -1rem;
   margin-top: 1rem;
   height: 100vh;
+  z-index: 1;
 }
 .leftbar_icons {
   color: #aaaaaa;
@@ -24,7 +25,7 @@
   /* color: white; */
   display: flex;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   .left_div {
     display: flex;
     flex-direction: row;
