--- a/src/Row/Row.css
+++ b/src/Row/Row.css
@@ -72,6 +72,7 @@
 @media only screen and (max-width: 800px) {
   .row_div {
     margin-top: 1rem;
+    height: 90vh;
   }
   .row-1 {
     margin-top: 1.7rem;
