--- a/src/VideoPlayingScreen/PlayVideo.css
+++ b/src/VideoPlayingScreen/PlayVideo.css
@@ -240,3 +240,12 @@
       width: 100%;
       height: 200px;
   }}
+  .crossIcon{
+    color:#aaaaaa;
+    font-size: 16px;
+    border: 0;
+  }
+  .label{
+    margin-left: 10px;
+    margin-top: -2px;
+  }
