--- a/src/VideoPlayingScreen/PlayVideo.css
+++ b/src/VideoPlayingScreen/PlayVideo.css
@@ -241,9 +241,10 @@
       height: 200px;
   }}
   .crossIcon{
-    color:#aaaaaa;
-    font-size: 16px;
-    border: 0;
+    color:white;
+    font-size: 15px;
+    border: none;
+    margin-top: -2px;
   }
   .label{
     margin-left: 10px;
