--- a/src/Row/Row.css
+++ b/src/Row/Row.css
@@ -59,8 +59,6 @@
   width: 340px;
 }
 .avatar {
-  width: 100%;
-  border-radius: 50%;
   max-width: 3rem;
   margin-top: 10px;
 }
@@ -86,6 +84,10 @@
   }
   .titles {
     font-size: 12px;
+    margin-left: -1rem;
+  }
+  .row_ava{
+    margin-left: -10px;
   }
 }
 /* large */
