--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,17 +1,32 @@
 .login-div {
-  /* border: 1px solid white; */
   margin: auto;
   width: 80%;
-  margin-top: 5rem;
-  height: 100vh;
+  margin-top: 11rem;
 }
+
+::-webkit-input-placeholder {
+  color: gray;
+}
+.text_bold {
+  font-weight: bold;
+  color:black;
+}
+.userContent {
+  /* border: 1px solid black; */
+  display: flex;
+  font-size: 20spx;
+  color: #282c3f;
+  margin-top: 1rem;
+  justify-content: space-between;
+}
+
 .signupScreen {
-  max-width: 300px;
+  max-width: 400px;
   padding: 70px;
   margin-left: auto;
   margin-right: auto;
-  background: rgba(0, 0, 0.85);
-  border: 1px solid red;
+  box-shadow: 0 0 4px rgb(0 0 0 / 20%);
+  background-color: white;
 }
 .signupScreen > form > input {
   outline-width: 0;
@@ -20,27 +35,22 @@
   border: none;
   border-radius: 5px;
   padding: 5px 15px;
-  width: 80%;
+  width: 90%;
   color: black;
-}
-::-webkit-input-placeholder {
-  color: gray;
+  border: 1px solid #b6b6b6;
+  border: 1px solid blue;
 }
 
-.signupScreen > form > button {
-  padding: 16px 20px;
-  font-size: 1rem;
-  column-count: #fff;
-  border-radius: 5px;
-  background-color: rgba(51, 51, 51, 0.5);
-  cursor: pointer;
-  border: none;
-  margin-top: 20px;
-  font-weight: 600;
-  color: white;
-}
-.signupScreen > form > button:hover {
-  color: #000;
-  background-color: #ccc1c1;
-  transition: all 0.2s ease-in;
+@media only screen and (max-width: 600px) {
+  .signupScreen {
+    width: 100%;
+    padding: 30px;
+    margin-left: -2rem;
+    margin-right: -2rem;
+    box-shadow: 0 0 4px rgb(0 0 0 / 20%);
+    background-color: white;
+  }
+  .userContent {
+    font-size: 17px;
+  }
 }
