--- a/src/Navbar/Nav.css
+++ b/src/Navbar/Nav.css
@@ -10,7 +10,7 @@
 }
 .header {
   display: flex;
-  margin: 10px;
+  margin-left: 10px;
 }
 .iconify {
   color: red;
@@ -45,7 +45,7 @@
   
 }
 .nav-btn1 {
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   cursor: pointer;
   color: #fff;
   outline: none;
@@ -113,7 +113,7 @@
     /* border: 1px solid white; */
     position: absolute;
     right: 0;
-    margin-right: 4rem;
+    margin-right: 10rem;
   }
 }
 /* //small// */
@@ -127,18 +127,38 @@
   .color_modes {
     position: absolute;
     right: 0;
-    margin-right: 4rem;
+    margin-right: 10rem;
   }
   .nav_avatar {
-    position: absolute;
-    right: 0;
-    margin-right: 10px;
+    /* position: absolute; */
+    /* right: 0;
+    margin-right: 1rem; */
   }
   .navbar-div {
     height: 10vh;
   }
   .header > div {
     overflow: hidden;
-    margin-top: -1rem;
+    /* margin-top: -1rem; */
   }
+}
+.homebtn{
+  position: absolute;
+  right: 0;
+  margin-top: 1.2rem;
+  cursor: pointer;
+  color: #fff;
+  outline: none;
+  border: none;
+  font-weight: 700;
+  text-align: center;
+  border-radius: 0.2vw;
+  margin-right: 1rem;
+  background-color: rgba(51, 51, 51, 0.5);
+  padding: 0.6rem 2rem; 
+}
+.homebtn:hover {
+  color: #000;
+  background-color: #e6e6e6;
+  transition: all 0.2s ease-in;
 }
