--- a/src/Row/Row.css
+++ b/src/Row/Row.css
@@ -4,7 +4,6 @@
 }
 
 .row-1::-webkit-scrollbar {
-  /* width: 1px; */
   height: 11px;
 }
 
@@ -25,7 +24,6 @@
 }
 
 .row-2::-webkit-scrollbar-track {
-  /* background: rgb(107, 107, 107); */
   background:black
 }
 
@@ -96,4 +94,7 @@
     margin-left: 12rem;
     overflow: hidden;
   }
+}
+.row_div{
+  height:95vh
 }
